Fix the agent data model, and changed from using container hostname (unstable), to be using machine ID of the Linux server instead
