# services/agents-service/docs/swagger.json
@@ -253,14 +253,10 @@
         "agent.RegisterAgentRequest": {
             "type": "object",
             "required": [
-                "hostname",
                 "instance_id",
                 "server_name"
             ],
             "properties": {
-                "hostname": {
-                    "type": "string"
-                },
                 "instance_id": {
                     "type": "string"
                 },
